Keycloak Spi: Downgrade to java version 21